Fixed header z-index

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ header{
     width: 100vw;
     color:#015C86;
     background-color: white;
+    z-index: 20;
 }
 
 .logo{
